<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_account"
        android:icon="@drawable/ic_action_accounts"
        android:showAsAction="always"
        android:title="@string/action_LoginNon"/>
    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_action_favourite"
        android:showAsAction="always"
        android:title="@string/action_fav"/>
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_help"
        android:showAsAction="always"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_not_secure"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>