<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:padding="5dp" >

    <TextView
        android:id="@+id/garageRatingNameDialog"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="24sp" />
<TextView
        android:id="@+id/levelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:layout_below="@id/garageRatingNameDialog"
        android:text="@string/selectLevel" />
    <Spinner
        android:id="@+id/levelPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelTV"
        android:entries="@array/levels"
        android:paddingTop="5dp" />

    <RadioGroup
        android:id="@+id/reportGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/levelPicker"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:drawablePadding="5dp"
            android:text="@string/full"
            android:checked="true"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/scarce"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/some"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/plenty"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:text="@string/empty"
            android:textColor="#000000" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reportGroup"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/reportButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Rate" />

        <Button
            android:id="@+id/cancelButtonDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="Cancel" />
    </LinearLayout>

    

</RelativeLayout>